@@ -16,16 +16,16 @@ import net.minecraft.world.level.Level;
 import net.minecraft.world.phys.Vec3;
 
 public class SlabGhastEntity extends _SpecialGhastEntity {
-
+    
     //--------------- Static Special Mob Hooks ----------------
-
+    
     @SpecialMob.SpeciesReference
     public static MobFamily.Species<SlabGhastEntity> SPECIES;
-
+    
     @SpecialMob.BestiaryInfoSupplier
     public static void getBestiaryInfo( BestiaryInfo.Builder bestiaryInfo ) {
         bestiaryInfo.color( 0xCECECE )
-                .weight( BestiaryInfo.DefaultWeight.DEFAULT )
+                .weight( BestiaryInfo.DefaultWeight.LOWEST )
                 .uniqueTextureWithAnimation()
                 .size( 1.0F, 4.0F, 2.0F )
                 .addExperience( 2 )
@@ -34,48 +34,48 @@ public class SlabGhastEntity extends _SpecialGhastEntity {
                 .addToAttribute( Attributes.ATTACK_DAMAGE, 4.0 )
                 .multiplyAttribute( Attributes.MOVEMENT_SPEED, 1.5 );
     }
-
+    
     @SpecialMob.LanguageProvider
     public static String[] getTranslations( String langKey ) {
         return References.translations( langKey, "Slab Ghast",
                 "", "", "", "", "", "" );//TODO
     }
-
+    
     @SpecialMob.LootTableProvider
     public static void buildLootTable( LootTableBuilder loot ) {
         addBaseLoot( loot );
         loot.addSemicommonDrop( "semicommon", SMItems.SLAB_FIREBALL.get() );
         loot.addUncommonDrop( "uncommon", Items.QUARTZ_SLAB );
     }
-
+    
     @SpecialMob.Factory
     public static EntityType.EntityFactory<SlabGhastEntity> getVariantFactory() { return SlabGhastEntity::new; }
-
+    
     /** @return This entity's mob species. */
     @SpecialMob.SpeciesSupplier
     @Override
     public MobFamily.Species<? extends SlabGhastEntity> getSpecies() { return SPECIES; }
-
-
+    
+    
     //--------------- Variant-Specific Implementations ----------------
-
+    
     public SlabGhastEntity( EntityType<? extends _SpecialGhastEntity> entityType, Level level ) { super( entityType, level ); }
-
+    
     /** Override to change this ghast's explosion power multiplier. */
     @Override
     protected int getVariantExplosionPower( int radius ) { return Math.round( radius * 0.5F ); }
-
+    
     /** Called to attack the target with a ranged attack. */
     @Override
-    public void performRangedAttack(LivingEntity target, float damageMulti ) {
+    public void performRangedAttack( LivingEntity target, float damageMulti ) {
         References.LevelEvent.GHAST_SHOOT.play( this );
-
+        
         final float accelVariance = Mth.sqrt( distanceTo( target ) ) * 0.5F * getSpecialData().getRangedAttackSpread();
         final Vec3 lookVec = getViewVector( 1.0F ).scale( getBbWidth() );
         double dX = target.getX() - (getX() + lookVec.x) + getRandom().nextGaussian() * accelVariance;
         double dY = target.getY( 0.5 ) - (0.5 + getY( 0.5 ));
         double dZ = target.getZ() - (getZ() + lookVec.z) + getRandom().nextGaussian() * accelVariance;
-
+        
         final SlabFireballEntity fireball = new SlabFireballEntity( level(), this, dX, dY, dZ );
         fireball.explosionPower = getVariantExplosionPower( getExplosionPower() );
         fireball.setPos(
